Add export functionality, Linux icons, and stability improvements

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -31,8 +31,7 @@
         <div class="sidebar-section">
           <h3>Quick Actions</h3>
           <ul class="action-list">
-            <li><button class="action-btn" id="test-all-btn">Test All Connections</button></li>
-            <li><button class="action-btn" id="backup-btn">Backup Configs</button></li>
+            <li><button class="action-btn" id="backup-btn">📁 Export</button></li>
             <li><button class="action-btn" id="import-btn">Import Configs</button></li>
           </ul>
         </div>
