--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -10,6 +10,48 @@
   <div class="app-container">
     <header class="app-header">
       <h1>SSH Manager</h1>
+      <nav class="menu-bar">
+        <div class="menu-item" id="file-menu">
+          <span class="menu-label">File</span>
+          <div class="dropdown-menu" id="file-dropdown">
+            <div class="menu-option" data-action="add-connection" data-shortcut="Ctrl+N">
+              <span>Add Connection</span>
+              <span class="shortcut">Ctrl+N</span>
+            </div>
+            <div class="menu-separator"></div>
+            <div class="menu-option" data-action="export-connections" data-shortcut="Ctrl+E">
+              <span>Export Connections</span>
+              <span class="shortcut">Ctrl+E</span>
+            </div>
+            <div class="menu-option" data-action="import-connections" data-shortcut="Ctrl+O">
+              <span>Import Connections</span>
+              <span class="shortcut">Ctrl+O</span>
+            </div>
+            <div class="menu-separator"></div>
+            <div class="menu-option" data-action="settings">
+              <span>Settings</span>
+            </div>
+          </div>
+        </div>
+        <div class="menu-item" id="view-menu">
+          <span class="menu-label">View</span>
+          <div class="dropdown-menu" id="view-dropdown">
+            <div class="menu-option" data-action="compact-mode" data-shortcut="Ctrl+1">
+              <span>Compact Mode</span>
+              <span class="shortcut">Ctrl+1</span>
+            </div>
+            <div class="menu-option" data-action="full-mode" data-shortcut="Ctrl+2">
+              <span>Full Details</span>
+              <span class="shortcut">Ctrl+2</span>
+            </div>
+            <div class="menu-separator"></div>
+            <div class="menu-option" data-action="refresh" data-shortcut="Ctrl+R">
+              <span>Refresh</span>
+              <span class="shortcut">Ctrl+R</span>
+            </div>
+          </div>
+        </div>
+      </nav>
       <div class="header-actions">
         <button id="add-connection-btn" class="btn btn-primary">Add Connection</button>
         <button id="refresh-btn" class="btn btn-secondary">Refresh</button>
@@ -28,11 +70,25 @@
           </div>
         </div>
 
-        <div class="sidebar-section">
-          <h3>Quick Actions</h3>
-          <ul class="action-list">
-            <li><button class="action-btn" id="backup-btn">📁 Export</button></li>
-          </ul>
+
+        <!-- Compact Mode Action Buttons -->
+        <div class="compact-actions" id="compact-actions" style="display: none;">
+          <div class="compact-buttons">
+            <button class="compact-btn compact-btn-primary" id="compact-connect-btn">
+              🚀 Connect
+            </button>
+            <button class="compact-btn compact-btn-secondary" id="compact-details-btn">
+              📄 Show Full Details
+            </button>
+            <button class="compact-btn compact-btn-secondary" id="compact-edit-btn">
+              ✏️ Edit
+            </button>
+          </div>
+          <div class="compact-info" id="compact-info">
+            <div class="compact-connection-details">
+              <span class="compact-connection-text">Select a connection</span>
+            </div>
+          </div>
         </div>
       </aside>
 
