Fix username handling and session save functionality
- Fix session editing/saving functionality by properly implementing updateConnection() method
- Change username default from 'root' to current system user
- Add conditional username handling in SSH config templates
- Only include User directive when username differs from current user
- Update all form placeholders to guide users on username field usage
- Add session file patterns to .gitignore to prevent tracking
- Improve SSH key-based authentication workflow

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -152,7 +152,7 @@
             <div class="form-row">
               <div class="form-group">
                 <label for="user">Username</label>
-                <input type="text" id="user" name="user" placeholder="e.g., root, ubuntu">
+                <input type="text" id="user" name="user" placeholder="e.g., ubuntu, admin (leave empty to use current user)">
               </div>
               <div class="form-group">
                 <label for="port">Port</label>
@@ -326,7 +326,7 @@
                 </div>
                 <div class="form-group">
                   <label for="edit-user">Username</label>
-                  <input type="text" id="edit-user" name="user" placeholder="e.g., root, ubuntu">
+                  <input type="text" id="edit-user" name="user" placeholder="e.g., ubuntu, admin (leave empty to use current user)">
                 </div>
                 <div class="form-group">
                   <label for="edit-port">Port</label>
