--- a/src/frontend/add-standalone.html
+++ b/src/frontend/add-standalone.html
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
               <label for="user">Username</label>
-              <input type="text" id="user" name="user" placeholder="e.g., root, ubuntu">
+              <input type="text" id="user" name="user" placeholder="e.g., ubuntu, admin (leave empty to use current user)">
             </div>
             <div class="form-group">
               <label for="port">Port</label>
