--- a/src/frontend/edit-standalone.html
+++ b/src/frontend/edit-standalone.html
@@ -38,7 +38,7 @@
             </div>
             <div class="form-group">
               <label for="edit-user">Username</label>
-              <input type="text" id="edit-user" name="user" placeholder="e.g., root, ubuntu">
+              <input type="text" id="edit-user" name="user" placeholder="e.g., ubuntu, admin (leave empty to use current user)">
             </div>
             <div class="form-group">
               <label for="edit-port">Port</label>
